<resources>
    <string name="app_name">ComponentesPrincipales</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="numero">Numero</string>
    <string name="numero_decimal">Numero decimal</string>
    <string name="numero_con_signo">Numero con Signo</string>
    <string name="numero_de_contrasenha">Numero de contrasenha</string>
    <string name="mayusculas_monolinea">Mayusculas monolinea</string>
    <string name="mayusculas_multilinea">Mayusculas multilinea</string>
    <string name="numero_con_signo_y_decimales">Numero con Signo y Decimales</string>
    <string name="inicial_mayusculas">Inicial Mayusculas</string>
    <string name="contrasenha_con_numeros_y_letras">Contrasenha con numeros y letras</string>
    <string name="fecha">Fecha</string>
    <string name="email">Email</string>
</resources>