<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#FFFF00"
        android:background="#FF0000"
        android:shadowColor="#2E7D32"
        android:shadowRadius="10"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/black"
        android:layout_margin="3dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mayusculas_monolinea"
        android:inputType="textCapCharacters"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mayusculas_multilinea"
        android:inputType="textCapCharacters|textMultiLine"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inicial_mayusculas"
        android:inputType="textCapWords"/>

    <!-- Limitar las entradas -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero"
        android:inputType="number"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_decimal"
        android:inputType="numberDecimal"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_con_signo"
        android:inputType="numberSigned"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_con_signo_y_decimales"
        android:inputType="numberSigned|numberDecimal"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_de_contrasenha"
        android:inputType="numberPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasenha_con_numeros_y_letras"
        android:inputType="textPassword|numberPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fecha"
        android:inputType="datetime"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

</LinearLayout>